Made code changes to actually utilize CUDA. Need to add more changes to swap going from CPU to CUDA when necessary because doing it with ALL tiles is a bad time.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -16,7 +16,7 @@
     "2. Define an agent that moves on the grid (8 directions) \\\n",
     "    a. Define state: local height patch around the agent, slope, roughness, and land-cover overlays \\\n",
     "    b. Action space: 8 directions (N/S/E/W/NE/NW/SE/SW) \\\n",
-    "    c. Reward ideas: Negative reward for steep slopes or high elevation change; Positive reward for reaching a target location with minimal 'effort' (elevation)\n",
+    "    c. Reward ideas: Negative reward for steep slopes or high elevation change; Positive reward for reaching a target location with minimal 'effort' (elevation). Agent's overall goal should be to get from point A to B under the most comfortable conditions, minimize distance traveled, whilst minimizing descent gradients traveled.\n",
     "3. First draft model: CNN-based policy/value network with PPO or DQN for descrete actions"
    ]
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f0ea41f3",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5a382003",
    "metadata": {},
    "outputs": [],
@@ -118,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "254e612d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29429f64910>"
+       "<matplotlib.image.AxesImage at 0x221236fd850>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,34 +162,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bdd3046f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
     "\n",
-    "def dem_to_tensor(arr):\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
+    "\n",
+    "torch.backends.cudnn.benchmark = True\n",
+    "USE_FP16 = False\n",
+    "DEFAULT_DTYPE = torch.float16 if USE_FP16 else torch.float32\n",
+    "\n",
+    "def dem_to_tensor(arr, dtype = DEFAULT_DTYPE):\n",
     "    # Replace no-data values if they are present\n",
     "    arr = np.where(np.isnan(arr), 0, arr) # Specifcally replacing with 0\n",
     "\n",
-    "    # Convert to float32\n",
-    "    arr = arr.astype(np.float32)\n",
     "\n",
     "    # Min-max normalization\n",
     "    arr_min = arr.min()\n",
     "    arr_max = arr.max()\n",
-    "    arr = (arr - arr_min) / (arr_max - arr_min + 1e-10) # Adding small division to avoid divide by 0s\n",
+    "    arr = (arr - arr_min) / (arr_max - arr_min + 1e-8) # Adding small division to avoid divide by 0s\n",
     "\n",
-    "    tensor = torch.from_numpy(arr).unsqueeze(0) # Adding a channel dimension\n",
+    "    tensor = torch.from_numpy(arr).unsqueeze(0).to(device=device, dtype=dtype) # Adding a channel dimension\n",
     "\n",
     "    return tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "da3ef758",
    "metadata": {},
    "outputs": [],
@@ -206,16 +219,20 @@
    "id": "b4eabb17",
    "metadata": {},
    "source": [
-    "### Last steps to turn the `tensor_tiles` into actual square patches for tiling"
+    "### Last steps\n",
+    "Turn the `tensor_tiles` into actual square patches for tiling. \\\n",
+    "Calculate the gradients per tile."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "908457eb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
     "def tiling(tensor, tile_size = 512):\n",
     "    # Process a given tensor and ensure it has the given shape (1, H, W) where H & W are the height and width of the tensor\n",
     "    _, H, W = tensor.shape\n",
@@ -226,12 +243,43 @@
     "            patch = tensor[:, r:r+tile_size, c:c+tile_size]\n",
     "            tiles.append((patch, r, c))\n",
     "\n",
-    "    return tiles"
+    "    return tiles\n",
+    "\n",
+    "def compute_gradients(tensor):\n",
+    "    # Compute gradients using Sobel filters, tiny 3x3 kernel that measures how fast values change in x/y directions\n",
+    "\n",
+    "    dev, dtype = tensor.device, tensor.dtype # Ensuring that the Sobel filters are on the same device and have the same dtype as the input tensor\n",
+    "    sobel_x = torch.tensor([\n",
+    "        [-1, 0, 1],\n",
+    "        [-2, 0, 2],\n",
+    "        [-1, 0, 1]\n",
+    "    ], device = dev, dtype = dtype\n",
+    "    )\n",
+    "    sobel_y = torch.tensor([\n",
+    "        [1, 2, 1],\n",
+    "        [0, 0, 0],\n",
+    "        [-1, -2, -1]\n",
+    "    ], device = dev, dtype = dtype\n",
+    "    )\n",
+    "    \n",
+    "    sobel_x = sobel_x.view(1, 1, 3, 3) # Reshape to (out_channels, in_channels, kernel_height, kernel_width)\n",
+    "    sobel_y = sobel_y.view(1, 1, 3, 3)\n",
+    "\n",
+    "    with torch.no_grad(): # No autograd needed for these operations\n",
+    "        tensor_batched = tensor.unsqueeze(0)\n",
+    "\n",
+    "        # Convolve with the sobel filters, this is analagous to computing the partial derivatives in x/y directions\n",
+    "        grad_x = F.conv2d(tensor_batched, sobel_x, padding = 1) # Slide the Sobel kernel across the DEM\n",
+    "        grad_y = F.conv2d(tensor_batched, sobel_y, padding = 1) # Padding keeps the output the same size\n",
+    "\n",
+    "        grad_magnitude = torch.sqrt(grad_x ** 2 + grad_y ** 2)\n",
+    "\n",
+    "    return grad_x, grad_y, grad_magnitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f57a7d96",
    "metadata": {},
    "outputs": [],
@@ -251,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b77abe3b",
    "metadata": {},
    "outputs": [],
@@ -269,7 +317,34 @@
     "            \"tensor\": patch,\n",
     "            \"affine_transform\": patch_transform,\n",
     "            \"crs\": crs\n",
-    "        })"
+    "        })\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "14e6d7fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OutOfMemoryError",
+     "evalue": "CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacity of 15.92 GiB of which 0 bytes is free. Of the allocated memory 30.09 GiB is allocated by PyTorch, and 8.60 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://docs.pytorch.org/docs/stable/notes/cuda.html#optimizing-memory-usage-with-pytorch-cuda-alloc-conf)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOutOfMemoryError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m elevation = tile[\u001b[33m\"\u001b[39m\u001b[33mtensor\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      4\u001b[39m grad_x, grad_y, grad_magnitude = compute_gradients(elevation)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m tile[\u001b[33m\"\u001b[39m\u001b[33mtensor\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43melevation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_x\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_y\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_magnitude\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mOutOfMemoryError\u001b[39m: CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacity of 15.92 GiB of which 0 bytes is free. Of the allocated memory 30.09 GiB is allocated by PyTorch, and 8.60 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://docs.pytorch.org/docs/stable/notes/cuda.html#optimizing-memory-usage-with-pytorch-cuda-alloc-conf)"
+     ]
+    }
+   ],
+   "source": [
+    "for tile in all_tiles:\n",
+    "    elevation = tile[\"tensor\"]\n",
+    "\n",
+    "    grad_x, grad_y, grad_magnitude = compute_gradients(elevation)\n",
+    "    tile[\"tensor\"] = torch.cat([elevation, grad_x.squeeze(0), grad_y.squeeze(0), grad_magnitude.squeeze(0)], dim=0)"
    ]
   },
   {
@@ -286,12 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d52cfe9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn.functional as F\n",
+    "\n",
     "\n",
     "def get_local_window(tensor, row, column, size =33):\n",
     "    # Produce a local window for the agent to observe, given a tensor and a center point (row, column) and window size\n",
@@ -299,20 +374,33 @@
     "    half = size // 2\n",
     "    H, W = tensor.shape[1], tensor.shape[2]\n",
     "\n",
-    "    # Initial window\n",
-    "    window = tensor[:, max(0, row - half): min(H, row + half + 1), # to handle out of bound edge errors\n",
-    "                  max(0, column - half): min(W, column + half + 1)] # consider padding the tensors with 0s\n",
-    "    \n",
-    "    # Add padding\n",
-    "    pad_top = max(0, half - row)\n",
-    "    pad_left = max(0, half - column)\n",
-    "    pad_bottom = max(0, (row + half + 1) - H)\n",
-    "    pad_right = max(0, (column + half + 1) - W)\n",
+    "    with torch.no_grad():\n",
+    "        # Initial window\n",
+    "        window = tensor[:, max(0, row - half): min(H, row + half + 1), # to handle out of bound edge errors\n",
+    "                    max(0, column - half): min(W, column + half + 1)] # consider padding the tensors with 0s\n",
+    "        \n",
+    "        # Add padding\n",
+    "        pad_top = max(0, half - row)\n",
+    "        pad_left = max(0, half - column)\n",
+    "        pad_bottom = max(0, (row + half + 1) - H)\n",
+    "        pad_right = max(0, (column + half + 1) - W)\n",
     "\n",
-    "    # Use F.pad to add the padding\n",
-    "    window = F.pad(window, (pad_left, pad_right, pad_top, pad_bottom), mode = 'constant', value = 0)\n",
+    "        # Use F.pad to add the padding\n",
+    "        window = F.pad(window, (pad_left, pad_right, pad_top, pad_bottom), mode = 'constant', value = 0)\n",
     "\n",
     "    return window"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b951355f",
+   "metadata": {},
+   "source": [
+    "##### Agent's observation space:\n",
+    "* Current window\n",
+    "* Distance to goal\n",
+    "* Most previous 2 actions\n",
+    "* slope magnitude"
    ]
   },
   {
