Changed a cell to use a generator approach instead of an iterator to reduce OOM issues.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x221236fd850>"
+       "<matplotlib.image.AxesImage at 0x2089ddf1710>"
       ]
      },
      "execution_count": 3,
@@ -152,6 +152,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22577de6",
+   "metadata": {},
+   "source": [
+    "##### Notes for Jarvin\n",
+    "OpenMP is a low-level parallelization framework used by:\n",
+    "* PyTorch (CPU operations)\n",
+    "* NumPy (when built with OpenBLAS)\n",
+    "* SciPy\n",
+    "* Rasterio (indirectly)\n",
+    "`OMP_NUM_THREADS` tells OpenMP to use a X number of threads.\n",
+    "\n",
+    "MKL = Math Kernel Library, and powers:\n",
+    "* NumPy (built with MKL)\n",
+    "* SciPy (if built with MKL)\n",
+    "* PyTorch CPU ops\n",
+    "`MKL_NUM_THREADS` tells MKL to use X number of threads."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "78e8f5b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current CPU count: 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set CPU thread limits (put this at top of the notebook)\n",
+    "import os, multiprocessing\n",
+    "n_cpu = multiprocessing.cpu_count()\n",
+    "print(f\"Current CPU count: {n_cpu}\")\n",
+    "\n",
+    "# environment vars used by BLAS/OpenMP/MKL\n",
+    "os.environ[\"OMP_NUM_THREADS\"] = str(n_cpu)\n",
+    "os.environ[\"MKL_NUM_THREADS\"] = str(n_cpu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9e0552b",
    "metadata": {},
    "source": [
@@ -162,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bdd3046f",
    "metadata": {},
    "outputs": [
@@ -178,12 +223,15 @@
     "import torch\n",
     "import numpy as np\n",
     "\n",
+    "# device = \"cpu\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)\n",
     "\n",
     "torch.backends.cudnn.benchmark = True\n",
     "USE_FP16 = False\n",
     "DEFAULT_DTYPE = torch.float16 if USE_FP16 else torch.float32\n",
+    "torch.set_num_threads(n_cpu)\n",
+    "torch.set_num_interop_threads(n_cpu)\n",
     "\n",
     "def dem_to_tensor(arr, dtype = DEFAULT_DTYPE):\n",
     "    # Replace no-data values if they are present\n",
@@ -202,12 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "da3ef758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor_tiles = [] # List to hold the resulting tensors\n",
+    "tensor_tiles = [] # List of tuples (name, tensor, affine_transform, crs)to hold the resulting tensors\n",
     "\n",
     "for name, arr, affine_transform, crs in dem_arrays:\n",
     "    tensor = dem_to_tensor(arr)\n",
@@ -226,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "908457eb",
    "metadata": {},
    "outputs": [],
@@ -238,10 +286,10 @@
     "    _, H, W = tensor.shape\n",
     "    tiles = []\n",
     "\n",
-    "    for r in range(0, H - tile_size + 1, tile_size):\n",
-    "        for c in range(0, W - tile_size + 1, tile_size):\n",
-    "            patch = tensor[:, r:r+tile_size, c:c+tile_size]\n",
-    "            tiles.append((patch, r, c))\n",
+    "    for row in range(0, H - tile_size + 1, tile_size):\n",
+    "        for column in range(0, W - tile_size + 1, tile_size):\n",
+    "            patch = tensor[:, row:row+tile_size, column:column+tile_size]\n",
+    "            tiles.append((patch, row, column))\n",
     "\n",
     "    return tiles\n",
     "\n",
@@ -279,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f57a7d96",
    "metadata": {},
    "outputs": [],
@@ -298,53 +346,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b77abe3b",
+   "cell_type": "markdown",
+   "id": "68d75793",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Bringing it all together, tiles into the transform and crs information\n",
-    "all_tiles = []\n",
-    "for name, tensor, affine_transform, crs in tensor_tiles:\n",
-    "    tiles = tiling(tensor, tile_size = 512)\n",
-    "    for patch, row, column in tiles:\n",
-    "        patch_transform = tile_transform(\n",
-    "            affine_transform, row, column\n",
-    "        )\n",
-    "        all_tiles.append({\n",
-    "            \"name\": f\"{name}_row{row}_column{column}\",\n",
-    "            \"tensor\": patch,\n",
-    "            \"affine_transform\": patch_transform,\n",
-    "            \"crs\": crs\n",
-    "        })\n",
-    "\n"
+    "##### Note for Jarvin:\n",
+    "The following cell was a culprit for getting Out Of Memory errors. There was too much data being thrown at RAM. To deal with this, an alternative is using a [generator](https://realpython.com/introduction-to-python-generators/). This should allow for the tiles to be processed sequentially, instead of all of the data being loaded in at once. It will inevitably take a longer time to process, but will be less of a load on the CPU/RAM."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "b77abe3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Bringing it all together, tiles into the transform and crs information\n",
+    "# all_tiles = []\n",
+    "# for name, tensor, affine_transform, crs in tensor_tiles:\n",
+    "#     tiles = tiling(tensor, tile_size = 512)\n",
+    "#     for patch, row, column in tiles:\n",
+    "#         patch_transform = tile_transform(\n",
+    "#             affine_transform, row, column\n",
+    "#         )\n",
+    "#         all_tiles.append({\n",
+    "#             \"name\": f\"{name}_row{row}_column{column}\",\n",
+    "#             \"tensor\": patch,\n",
+    "#             \"affine_transform\": patch_transform,\n",
+    "#             \"crs\": crs\n",
+    "#         })\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006b9e7d",
+   "metadata": {},
+   "source": [
+    "Generators are like iterators. Calling next(gen) resumes the execution where it was last left off. In essence, it's a function that remembers. Normal functions will run everything top to bottom and return once, then forget everything. A generator pauses at `yield` and returns that value, remembers where its stack is, then resumes where it left off if called again.\n",
+    "\n",
+    "Generators are lazy. They don't compute everything up front. It computes one at a time, and *only when asked*. They're perfect for:\n",
+    "* streaming large files\n",
+    "* processing huge datasets\n",
+    "* avoiding memory blow-ups\n",
+    "* pipelines where you want constant memory usage\n",
+    "\n",
+    "The fix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2719416f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_tiles(tensor, affine_transform, crs, tile_size = 512):\n",
+    "    tiles = tiling(tensor, tile_size)\n",
+    "    for patch, row, column in tiles:\n",
+    "        patch_transform = tile_transform(affine_transform, row, column)\n",
+    "        yield {\n",
+    "            \"tensor\" : patch,\n",
+    "            \"affine_transform\" : patch_transform,\n",
+    "            \"crs\" : crs\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "14e6d7fa",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OutOfMemoryError",
-     "evalue": "CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacity of 15.92 GiB of which 0 bytes is free. Of the allocated memory 30.09 GiB is allocated by PyTorch, and 8.60 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://docs.pytorch.org/docs/stable/notes/cuda.html#optimizing-memory-usage-with-pytorch-cuda-alloc-conf)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOutOfMemoryError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m elevation = tile[\u001b[33m\"\u001b[39m\u001b[33mtensor\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      4\u001b[39m grad_x, grad_y, grad_magnitude = compute_gradients(elevation)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m tile[\u001b[33m\"\u001b[39m\u001b[33mtensor\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43melevation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_x\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_y\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_magnitude\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mOutOfMemoryError\u001b[39m: CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacity of 15.92 GiB of which 0 bytes is free. Of the allocated memory 30.09 GiB is allocated by PyTorch, and 8.60 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://docs.pytorch.org/docs/stable/notes/cuda.html#optimizing-memory-usage-with-pytorch-cuda-alloc-conf)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for tile in all_tiles:\n",
-    "    elevation = tile[\"tensor\"]\n",
+    "for name, tensor, affine_transform, crs in tensor_tiles:\n",
+    "    for tile in generate_tiles(tensor, affine_transform, crs):\n",
+    "        elevation = tile[\"tensor\"]\n",
     "\n",
-    "    grad_x, grad_y, grad_magnitude = compute_gradients(elevation)\n",
-    "    tile[\"tensor\"] = torch.cat([elevation, grad_x.squeeze(0), grad_y.squeeze(0), grad_magnitude.squeeze(0)], dim=0)"
+    "        grad_x, grad_y, grad_magnitude = compute_gradients(elevation)\n",
+    "        tile[\"tensor\"] = torch.cat([elevation, grad_x.squeeze(0), grad_y.squeeze(0), grad_magnitude.squeeze(0)], dim=0)"
    ]
   },
   {
@@ -366,7 +446,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\n",
     "def get_local_window(tensor, row, column, size =33):\n",
     "    # Produce a local window for the agent to observe, given a tensor and a center point (row, column) and window size\n",
